fixing bottom spacing for form fields

--- a/src/styles/partials/components/_form.scss
+++ b/src/styles/partials/components/_form.scss
@@ -1,4 +1,6 @@
 .dg_form-field {
+  margin-bottom: $default-margin;
+
   input,
   label,
   label > span {
